--- a/matchSuccess.html
+++ b/matchSuccess.html
@@ -22,7 +22,7 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-        <title>Onboarding</title>
+        <title>Match Success</title>
     </head>
 
     <body style="font-family: Helvetica">
@@ -31,14 +31,14 @@
             
             <div>
                 <div class="col text-center">
-                    <h1>Anode: Semi-Anonymous Dating App</h1>
+                    <h1>It's a match!</h1>
                 </div>
 
                 <br>
 
                 <div class="col text-center">
-                    <a href="swipepage.html">
-                        <button type="button" class="btn btn-primary startButton">Start</button>
+                    <a href="matches.html">
+                        <button type="button" class="btn btn-primary startButton">Continue</button>
                     </a>
                 </div>
             </div>
