--- a/matches.html
+++ b/matches.html
@@ -18,7 +18,7 @@
 		</tr>
 		<tr>
 			<th style="font-size:14px; vertical-align: text-top">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Hey, nice to match with you!
 			</th>
 		</tr>
 				<tr>
@@ -27,15 +27,15 @@
 				style="width:100px; height: 100px; object-fit: cover;">
 			</th>
 			<th>
-				John
+				Lily
 			</th>
 			<th>
-				11:32pm
+				11:02pm
 			</th>
 		</tr>
 		<tr>
 			<th style="font-size:14px; vertical-align: text-top">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Hey, how are you?
 			</th>
 		</tr>
 				<tr>
@@ -44,15 +44,15 @@
 				style="width:100px; height: 100px; object-fit: cover;">
 			</th>
 			<th>
-				John
+				James
 			</th>
 			<th>
-				11:32pm
+				09:23pm
 			</th>
 		</tr>
 		<tr>
 			<th style="font-size:14px; vertical-align: text-top">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				What are your plans for today?
 			</th>
 		</tr>
 	</table>
