--- a/matches.html
+++ b/matches.html
@@ -6,11 +6,12 @@
 	<table style="text-align:left">
 		<tr>
 			<th rowspan="2">
-				<img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-				style="width:100px; height: 100px; object-fit: cover;">
+				<a href="chatSimulation.html">
+					<img src="Jane Doe 80 percent blur.png" style="width:100px; height: 100px; object-fit: cover;">
+				</a>
 			</th>
 			<th>
-				John
+				Jane Doe
 			</th>
 			<th>
 				11:32pm
