--- a/matches.html
+++ b/matches.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<body style="font-family: Helvetica">
-
+	<body style="font-family: Helvetica; 
+	margin: 0; position: absolute; 
+	top: 50%; left: 50%;-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);">
+	<center>
 	<h2>Matches</h2>
-	<table style="text-align:left">
+	<table style="text-align:left; ">
 		<tr>
 			<th rowspan="2">
 				<a href="chatSimulation.html">
@@ -57,6 +60,6 @@
 			</th>
 		</tr>
 	</table>
+	</center>
 	</body>
 </html>
-
