--- a/swipepage.html
+++ b/swipepage.html
@@ -25,7 +25,7 @@
             .image-container{
                 width: 300px;
                 height: 300px;
-                background-image: url("photos.jpg");
+                background-image: url("https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
