--- a/swipepage.html
+++ b/swipepage.html
@@ -67,7 +67,7 @@
             .image-container-1{
                 width: 300px;
                 height: 300px;
-                background-image: url("photos1.png");
+                background-image: url("Jane Doe 80 percent blur.png");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
