--- a/swipepage.html
+++ b/swipepage.html
@@ -129,8 +129,8 @@
                     <div class="image-container"></div>      
                     <div class="description">
                         <p class="title">Profile</p>
-                        <p>John, 22</p>
-                        <p> IT Analyst at Amazon</p>
+                        <p>Jane, 22</p>
+                        <p> Business Analyst at Amazon</p>
                         <p>University of Queensland, 2022</p>
                     </div> 
                     <div class="description">
