--- a/matches.html
+++ b/matches.html
@@ -9,8 +9,8 @@
 	<table style="text-align:left; ">
 		<tr>
 			<th rowspan="2">
-				<a href="chatSimulation.html">
-					<img src="Jane Doe 80 percent blur.png" style="width:100px; height: 100px; object-fit: cover;">
+				<a href="index.html">
+					<img src="80 percent blur.png" style="width:100px; height: 100px; object-fit: cover;">
 				</a>
 			</th>
 			<th>
@@ -27,8 +27,7 @@
 		</tr>
 				<tr>
 			<th rowspan="2">
-				<img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-				style="width:100px; height: 100px; object-fit: cover;">
+				<img src="blur3.png" style="width:100px; height: 100px; object-fit: cover;">
 			</th>
 			<th>
 				Lily
@@ -44,8 +43,7 @@
 		</tr>
 				<tr>
 			<th rowspan="2">
-				<img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-				style="width:100px; height: 100px; object-fit: cover;">
+				<img src="blur3.png" style="width:100px; height: 100px; object-fit: cover;">
 			</th>
 			<th>
 				James
