--- a/swipepage.html
+++ b/swipepage.html
@@ -126,7 +126,9 @@
                         </div>
                         <div><a href="matchSuccess.html"><p class="btn btn-primary textButton">Like</p></a></div>
                     </div>
-                    <div class="image-container"></div>      
+                    <div class="image-container">
+                        <img src="80 percent blur.png" height="300vh">
+                    </div>      
                     <div class="description">
                         <p class="title">Profile</p>
                         <p>Jane, 22</p>
